fix slideshow bug on safari

--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -101,6 +101,9 @@ h1{margin:5px 0 10px 0; font-weight:200; text-transform:capitalize;}
 #Slideshow{position:relative; width:75%; height:30vw; overflow:hidden; margin:0 auto;
       .clearfix{width:53px; height:100vh;}
       img{width:100%}
+      .cycle-slideshow{
+        div{height:35vw}
+      }
 }
 
 #Sidebar{  position:fixed; top:0; right:-255px; width:310px; height:100vh; .transition(all .75s ease-in-out); .opacity(1);
